REGRESSION (r268932): CPU usage higher than expected with sibling elements running WebAnimations https://bugs.webkit.org/show_bug.cgi?id=228833 <rdar://problem/81573075>

Reviewed by Antti Koivisto.

Source/WebCore:

Test: webanimations/no-style-updates-for-animated-sibling-elements-accelerated.html

Elements that have any type of animations, and not just CSS Transitions and CSS Animations,
should not be eligible for style sharing.

* style/StyleSharingResolver.cpp:
(WebCore::Style::SharingResolver::canShareStyleWithElement const):

LayoutTests:

Add a new test that checks that accelerated animations on sibling elements do not yield style updates.

* platform/win/TestExpectations:
* webanimations/no-style-updates-for-animated-sibling-elements-accelerated-expected.txt: Added.
* webanimations/no-style-updates-for-animated-sibling-elements-accelerated.html: Added.


Canonical link: https://commits.webkit.org/243867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285256 268f45cc-cd09-0410-ab3c-d52691b4dbfc